--- a/.github/workflows/keel.yml
+++ b/.github/workflows/keel.yml
@@ -6,14 +6,27 @@ on:
     inputs:
       publish-containers:
         description: Publish containers
+        type: boolean
         default: true
       publish-debs:
         description: Publish debs
+        type: boolean
         default: true
       version-override:
-        description: Overrides the version for artifacts
+        description: Overrides the version for artifacts (e.g. "1.37.1").  Otherwise, uses the auto-incrementing build number for the current branch.
 
   workflow_dispatch:
+    inputs:
+      publish-containers:
+        description: Publish containers
+        type: boolean
+        default: true
+      publish-debs:
+        description: Publish debs
+        type: boolean
+        default: true
+      version-override:
+        description: Overrides the version for artifacts (e.g. "1.37.1").  Otherwise, uses the auto-incrementing build number for the current branch.
 
   push:
     branches:
@@ -42,9 +55,9 @@ jobs:
         with:
           project: keel
           publish: ${{ github.event_name != 'pull_request' }}
-          publish-containers: ${{ github.event_name != 'workflow_call' && true || inputs.publish-containers }}
-          publish-debs: ${{ github.event_name != 'workflow_call' && true || inputs.publish-debs }}
-          version-override: ${{ github.event_name == 'workflow_call' && inputs.version-override || '' }}
+          publish-containers: ${{ inputs.publish-containers != false }}
+          publish-debs: ${{ inputs.publish-debs != false }}
+          version-override: ${{ inputs.version-override || '' }}
           publish-halconfig: false
           integration-test: false
           github-token: ${{ secrets.GITHUB_TOKEN }}
