--- a/.github/workflows/spin.yml
+++ b/.github/workflows/spin.yml
@@ -4,7 +4,7 @@ on:
   workflow_call:
     inputs:
       version-override:
-        description: Overrides the version for artifacts
+        description: Overrides the version for artifacts (e.g. "1.37.1").  Otherwise, uses the auto-incrementing build number for the current branch.
 
   workflow_dispatch:
 
