--- a/.github/workflows/spinnaker-gradle-project.yml
+++ b/.github/workflows/spinnaker-gradle-project.yml
@@ -1,7 +1,15 @@
 name: Spinnaker Gradle Project
 
 on:
+  workflow_call:
+    inputs:
+      version-override:
+        description: Overrides the version for artifacts (e.g. "1.37.1").  Otherwise, uses the auto-incrementing build number for the current branch.
+
   workflow_dispatch:
+    inputs:
+      version-override:
+        description: Overrides the version for artifacts (e.g. "1.37.1").  Otherwise, uses the auto-incrementing build number for the current branch.
 
   push:
     branches:
