--- a/.github/workflows/deck.yml
+++ b/.github/workflows/deck.yml
@@ -6,12 +6,15 @@ on:
     inputs:
       publish-containers:
         description: Publish containers
+        type: boolean
         default: true
       publish-debs:
         description: Publish debs
+        type: boolean
         default: true
       publish-npm:
         description: Publish npm
+        type: boolean
         default: true
       version-override:
         description: Overrides the version for artifacts (e.g. "1.37.1").  Otherwise, uses the auto-incrementing build number for the current branch.
@@ -20,12 +23,15 @@ on:
     inputs:
       publish-containers:
         description: Publish containers
+        type: boolean
         default: true
       publish-debs:
         description: Publish debs
+        type: boolean
         default: true
       publish-npm:
         description: Publish npm
+        type: boolean
         default: true
       version-override:
         description: Overrides the version for artifacts (e.g. "1.37.1").  Otherwise, uses the auto-incrementing build number for the current branch.
@@ -53,8 +59,10 @@ jobs:
           project: deck
           docker-build-command: ':deck:webpack'
           publish: ${{ github.event_name != 'pull_request' }}
-          publish-npm: ${{ github.event_name != 'workflow_call' && true || inputs.publish-npm }}
-          version-override: ${{ github.event_name == 'workflow_call' && inputs.version-override || '' }}
+          publish-containers: ${{ inputs.publish-containers != false }}
+          publish-debs: ${{ inputs.publish-debs != false }}
+          publish-npm: ${{ inputs.publish-npm != false }}
+          version-override: ${{ inputs.version-override || '' }}
           integration-test: false
           github-token: ${{ secrets.GITHUB_TOKEN }}
           gar-json-key: ${{ secrets.GAR_JSON_KEY }}
