--- a/.github/actions/spinnaker-release/package.json
+++ b/.github/actions/spinnaker-release/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@actions/artifact": "^1.1.2",
     "@actions/core": "^1.10.1",
+    "@actions/github": "^6.0.0",
     "@google-cloud/storage": "^7.5.0",
     "yaml": "^2.3.4"
   }
