--- a/.github/actions/version/action.yml
+++ b/.github/actions/version/action.yml
@@ -84,17 +84,17 @@ runs:
           fi
           
           RELEASE_TRAIN="${SPLIT_VER[0]}${SPLIT_VER[1]}"
-          echo "release-train-suffixed=${RELEASE_TRAIN}.x" >> "$GITHUB_OUTPUT"
+          echo "release-train-suffixed=$RELEASE_TRAIN.x" >> "$GITHUB_OUTPUT"
           echo "release-train=$RELEASE_TRAIN" >> "$GITHUB_OUTPUT"
           
           BUILD_NUMBER="${SPLIT_VER[2]}"
           echo "build-number=$BUILD_NUMBER" >> "$GITHUB_OUTPUT"
           
           # Note that this is dot-joined, unlike the autoincrement build numbers which are hyphen-joined
-          VERSION="${RELEASE_TRAIN}.${BUILD_NUMBER}"
+          VERSION="$RELEASE_TRAIN.$BUILD_NUMBER"
           echo "version=$VERSION" >> "$GITHUB_OUTPUT"
           
-          TAG="spinnaker-$REF-$VERSION"
+          TAG="${{ inputs.project }}-$VERSION"
           echo "tag=$TAG" >> "$GITHUB_OUTPUT"
         else
           if [[ '${{ github.event_name }}' == 'pull_request' ]]; then
