--- a/.github/workflows/spinnaker-release.yml
+++ b/.github/workflows/spinnaker-release.yml
@@ -17,6 +17,7 @@ on:
 
 jobs:
   check-preconditions:
+    runs-on: ubuntu-latest
     steps:
       - name: Exit if not on a release branch
         run: |
@@ -49,120 +50,137 @@ jobs:
           fi
 
   version:
+    runs-on: ubuntu-latest
+    steps:
     - id: version
       uses: ./.github/actions/version
       needs: check-preconditions
       with:
         namespace: spinnaker
         github-token: ${{ secrets.GITHUB_TOKEN }}
-        skip-increment: false
+        skip-increment: ${{ github.run_attempt != '1' }}
         skip-tag: ${{ inputs.dry-run != 'false' }}
 
   clouddriver:
     if: inputs.dry-run == 'false'
+    runs-on: ubuntu-latest
     needs: version
     uses: ./.github/workflows/clouddriver.yml
     secrets: inherit
     with:
-      version-override: ${{ steps.version.outputs.version }}
+      version-override: ${{ needs.version.steps.version.outputs.version }}
   deck:
     if: inputs.dry-run == 'false'
+    runs-on: ubuntu-latest
     needs: version
     uses: ./.github/workflows/deck.yml
     secrets: inherit
     with:
-      version-override: ${{ steps.version.outputs.version }}
+      version-override: ${{ needs.version.steps.version.outputs.version }}
   deck-kayenta:
     if: inputs.dry-run == 'false'
+    runs-on: ubuntu-latest
     needs: version
     uses: ./.github/workflows/deck-kayenta.yml
     secrets: inherit
     with:
-      version-override: ${{ steps.version.outputs.version }}
+      version-override: ${{ needs.version.steps.version.outputs.version }}
   echo:
     if: inputs.dry-run == 'false'
+    runs-on: ubuntu-latest
     needs: version
     uses: ./.github/workflows/echo.yml
     secrets: inherit
     with:
-      version-override: ${{ steps.version.outputs.version }}
+      version-override: ${{ needs.version.steps.version.outputs.version }}
   fiat:
     if: inputs.dry-run == 'false'
+    runs-on: ubuntu-latest
     needs: version
     uses: ./.github/workflows/fiat.yml
     secrets: inherit
     with:
-      version-override: ${{ steps.version.outputs.version }}
+      version-override: ${{ needs.version.steps.version.outputs.version }}
   front50:
     if: inputs.dry-run == 'false'
+    runs-on: ubuntu-latest
     needs: version
     uses: ./.github/workflows/front50.yml
     secrets: inherit
     with:
-      version-override: ${{ steps.version.outputs.version }}
+      version-override: ${{ needs.version.steps.version.outputs.version }}
   gate:
     if: inputs.dry-run == 'false'
+    runs-on: ubuntu-latest
     needs: version
     uses: ./.github/workflows/gate.yml
     secrets: inherit
     with:
-      version-override: ${{ steps.version.outputs.version }}
+      version-override: ${{ needs.version.steps.version.outputs.version }}
   halyard:
     if: inputs.dry-run == 'false'
+    runs-on: ubuntu-latest
     needs: version
     uses: ./.github/workflows/halyard.yml
     secrets: inherit
     with:
-      version-override: ${{ steps.version.outputs.version }}
+      version-override: ${{ needs.version.steps.version.outputs.version }}
   igor:
     if: inputs.dry-run == 'false'
+    runs-on: ubuntu-latest
     needs: version
     uses: ./.github/workflows/igor.yml
     secrets: inherit
     with:
-      version-override: ${{ steps.version.outputs.version }}
+      version-override: ${{ needs.version.steps.version.outputs.version }}
   kayenta:
     if: inputs.dry-run == 'false'
+    runs-on: ubuntu-latest
     needs: version
     uses: ./.github/workflows/kayenta.yml
     secrets: inherit
     with:
-      version-override: ${{ steps.version.outputs.version }}
+      version-override: ${{ needs.version.steps.version.outputs.version }}
   keel:
     if: inputs.dry-run == 'false'
+    runs-on: ubuntu-latest
     needs: version
     uses: ./.github/workflows/keel.yml
     secrets: inherit
     with:
-      version-override: ${{ steps.version.outputs.version }}
+      version-override: ${{ needs.version.steps.version.outputs.version }}
   orca:
     if: inputs.dry-run == 'false'
+    runs-on: ubuntu-latest
     needs: version
     uses: ./.github/workflows/orca.yml
     secrets: inherit
     with:
-      version-override: ${{ steps.version.outputs.version }}
+      version-override: ${{ needs.version.steps.version.outputs.version }}
   rosco:
     if: inputs.dry-run == 'false'
+    runs-on: ubuntu-latest
     needs: version
     uses: ./.github/workflows/rosco.yml
     secrets: inherit
     with:
-      version-override: ${{ steps.version.outputs.version }}
+      version-override: ${{ needs.version.steps.version.outputs.version }}
   spin:
     if: inputs.dry-run == 'false'
+    runs-on: ubuntu-latest
     needs: version
     uses: ./.github/workflows/spin.yml
     secrets: inherit
     with:
-      version-override: ${{ steps.version.outputs.version }}
+      version-override: ${{ needs.version.steps.version.outputs.version }}
   libs:
     if: inputs.dry-run == 'false'
+    runs-on: ubuntu-latest
     needs: version
     uses: ./.github/workflows/spinnaker-libraries.yml
     secrets: inherit
     with:
-      version-override: ${{ steps.version.outputs.version }}
+      version-override: ${{ needs.version.steps.version.outputs.version }}
 
   spinnaker-release-bom:
     runs-on: ubuntu-latest
@@ -171,7 +189,7 @@ jobs:
     # https://github.com/actions/runner/issues/491
     if: |
       always() &&
-      (needs.version.result == 'success' || needs.version.result == 'skipped') &&
+      (needs.version.result == 'success') &&
       (needs.clouddriver.result == 'success' || needs.clouddriver.result == 'skipped') &&
       (needs.deck.result == 'success' || needs.deck.result == 'skipped') &&
       (needs.deck-kayenta.result == 'success' || needs.deck-kayenta.result == 'skipped') &&
@@ -196,11 +214,7 @@ jobs:
       - name: Process Inputs
         shell: bash
         run: |
-          if [[ '${{ inputs.spinnaker-version }}' == '' ]]; then
-            echo "spinnaker-version=${{ needs.version.steps.version.outputs.release-train }}.${{ needs.version.steps.version.outputs.build-number }}" >> "$GITHUB_ENV"
-          else
-            echo "spinnaker-version=${{ inputs.spinnaker-version }}" >> "$GITHUB_ENV"
-          fi
+          echo "spinnaker-version=${{ needs.version.steps.version.outputs.release-train }}.${{ needs.version.steps.version.outputs.build-number }}" >> "$GITHUB_ENV"
 
       - name: Create Spinnaker release BoM and changelog
         id: spinnaker-release-bom
@@ -208,7 +222,6 @@ jobs:
         with:
           credentials-json: ${{ secrets.GAR_JSON_KEY }}
           version: ${{ env.spinnaker-version }}
-          previous-version: ${{ inputs.previous-version }}
           dry-run: ${{ inputs.dry-run }}
 
       - name: Create Github release
