--- a/.github/actions/spinnaker-release/package.json
+++ b/.github/actions/spinnaker-release/package.json
@@ -22,6 +22,8 @@
     "@actions/core": "^1.10.1",
     "@actions/github": "^6.0.0",
     "@google-cloud/storage": "^7.5.0",
+    "dayjs": "^1.11.13",
+    "uuid": "^11.1.0",
     "yaml": "^2.3.4"
   }
 }
