More input types

--- a/.github/workflows/clouddriver.yml
+++ b/.github/workflows/clouddriver.yml
@@ -14,17 +14,21 @@ on:
         default: true
       version-override:
         description: Overrides the version for artifacts (e.g. "1.37.1").  Otherwise, uses the auto-incrementing build number for the current branch.
+        type: string
 
   workflow_dispatch:
     inputs:
       publish-containers:
         description: Publish containers
+        type: boolean
         default: true
       publish-debs:
         description: Publish debs
+        type: boolean
         default: true
       version-override:
         description: Overrides the version for artifacts (e.g. "1.37.1").  Otherwise, uses the auto-incrementing build number for the current branch.
+        type: string
 
   push:
     branches:
