--- a/.github/workflows/echo.yml
+++ b/.github/workflows/echo.yml
@@ -13,7 +13,8 @@ on:
         type: boolean
         default: true
       version-override:
-        description: Overrides the version for artifacts
+        description: Overrides the version for artifacts (e.g. "1.37.1").  Otherwise, uses the auto-incrementing build number for the current branch.
+        type: string
 
   workflow_dispatch:
     inputs:
@@ -27,6 +28,7 @@ on:
         default: true
       version-override:
         description: Overrides the version for artifacts (e.g. "1.37.1").  Otherwise, uses the auto-incrementing build number for the current branch.
+        type: string
 
   push:
     branches:
