--- a/.github/workflows/deck-kayenta.yml
+++ b/.github/workflows/deck-kayenta.yml
@@ -9,7 +9,8 @@ on:
         type: boolean
         default: true
       version-override:
-        description: Overrides the version for artifacts
+        description: Overrides the version for artifacts (e.g. "1.37.1").  Otherwise, uses the auto-incrementing build number for the current branch.
+        type: string
   workflow_dispatch:
     inputs:
       publish-npm:
@@ -17,7 +18,8 @@ on:
         type: boolean
         default: true
       version-override:
-        description: Overrides the version for artifacts
+        description: Overrides the version for artifacts (e.g. "1.37.1").  Otherwise, uses the auto-incrementing build number for the current branch.
+        type: string
 
   push:
     branches:
