--- a/.github/workflows/deck.yml
+++ b/.github/workflows/deck.yml
@@ -18,6 +18,7 @@ on:
         default: true
       version-override:
         description: Overrides the version for artifacts (e.g. "1.37.1").  Otherwise, uses the auto-incrementing build number for the current branch.
+        type: string
 
   workflow_dispatch:
     inputs:
@@ -35,6 +36,7 @@ on:
         default: true
       version-override:
         description: Overrides the version for artifacts (e.g. "1.37.1").  Otherwise, uses the auto-incrementing build number for the current branch.
+        type: string
 
   push:
     branches:
