--- a/.github/workflows/spin.yml
+++ b/.github/workflows/spin.yml
@@ -5,8 +5,13 @@ on:
     inputs:
       version-override:
         description: Overrides the version for artifacts (e.g. "1.37.1").  Otherwise, uses the auto-incrementing build number for the current branch.
+        type: string
 
   workflow_dispatch:
+    inputs:
+      version-override:
+        description: Overrides the version for artifacts (e.g. "1.37.1").  Otherwise, uses the auto-incrementing build number for the current branch.
+        type: string
 
   push:
     branches:
