--- a/.github/actions/publish-docker/action.yml
+++ b/.github/actions/publish-docker/action.yml
@@ -24,6 +24,8 @@ inputs:
   container-registry:
     description: Destination container registry
     default: us-west2-docker.pkg.dev/spinnaker-monorepo-test/docker
+  github-token:
+    description: Github token to expose to the build, needed for Packer plugin rate limits
   gar-json-key:
     description: Google Artifact Registry JSON key
     required: true
@@ -80,6 +82,8 @@ runs:
         platforms: linux/amd64,linux/arm64
         push: ${{ inputs.push == 'true' }}
         build-args: ${{ inputs.build-args }}
+        secrets: |
+          github_token=${{ inputs.github-token }}
         tags: |
           "${{ inputs.container-registry }}/${{ inputs.project }}:${{ inputs.version }}"
           "${{ inputs.container-registry }}/${{ inputs.project }}:${{ inputs.release-train }}-latest"
