--- a/keel/build.gradle
+++ b/keel/build.gradle
@@ -39,6 +39,15 @@ allprojects {
       testRuntimeOnly("org.junit.platform:junit-platform-launcher")
       testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine")
     }
+
+    test {
+      useJUnitPlatform()
+      testLogging {
+        exceptionFormat = "full"
+      }
+      minHeapSize = "2g"
+      maxHeapSize = "3g"
+    }
   }
 
   configurations.all {
