--- a/keel/gradle/test.gradle
+++ b/keel/gradle/test.gradle
@@ -2,13 +2,15 @@ apply(plugin: "com.adarshr.test-logger")
 
 dependencies {
   testImplementation "org.junit.platform:junit-platform-runner"
-  testImplementation "com.nhaarman.mockitokotlin2:mockito-kotlin:2.1.0"
   testImplementation "org.junit.jupiter:junit-jupiter-api"
   testImplementation "org.junit.platform:junit-platform-launcher"
   testImplementation "org.junit.jupiter:junit-jupiter-engine"
 }
 
 test {
+  minHeapSize = "1g"
+  maxHeapSize = "3g"
+
   useJUnitPlatform {
     includeEngines("junit-jupiter")
   }
