Attempt to fix questionable golang lint config

--- a/spin/.golangci.yml
+++ b/spin/.golangci.yml
@@ -3,13 +3,15 @@ run:
   skip-dirs:
       - gateapi
 linters:
-  default: none
+  disable-all: true
   enable:
     - gofmt
     - goimports
     - govet
     # TODO(jan25): Enable this along with all violation fixes
     # - golint
+  disable:
+    - typecheck
 linters-settings:
   goimports:
     local-prefixes: github.com/spinnaker/spin
