--- a/.github/workflows/spinnaker-release.yml
+++ b/.github/workflows/spinnaker-release.yml
@@ -31,14 +31,14 @@ jobs:
             echo "Release workflow must be run from a release branch"
             exit 1
           fi
-          
-      - name: Generate next build tag without storing it
-        uses: ./.github/actions/build-tag-number
+
+      - name: Generate version to verify
         id: precondition-version
+        uses: ./.github/actions/version
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          suffix: ${{ format('{0}-{1}', 'spinnaker', github.ref_name) }}
-          skip-increment: false
+          namespace: spinnaker
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          skip-increment: ${{ github.run_attempt != '1' }}
           skip-tag: true
 
       - name: Verify expected release version
@@ -54,6 +54,7 @@ jobs:
   version:
     runs-on: ubuntu-latest
     needs: check-preconditions
+    if: inputs.dry-run == 'false'
     steps:
       - uses: actions/checkout@v4
         with:
@@ -65,7 +66,7 @@ jobs:
           namespace: spinnaker
           github-token: ${{ secrets.GITHUB_TOKEN }}
           skip-increment: ${{ github.run_attempt != '1' }}
-          skip-tag: ${{ inputs.dry-run != 'false' }}
+          skip-tag: false
 
   clouddriver:
     if: inputs.dry-run == 'false'
