--- a/.github/workflows/spinnaker-release.yml
+++ b/.github/workflows/spinnaker-release.yml
@@ -55,7 +55,7 @@ jobs:
   version:
     runs-on: ubuntu-latest
     needs: check-preconditions
-    if: inputs.dry-run == 'false'
+    if: inputs.dry-run == false
     steps:
       - uses: actions/checkout@v4
         with:
@@ -71,105 +71,105 @@ jobs:
           github-token: ${{ secrets.GITHUB_TOKEN }}
 
   clouddriver:
-    if: inputs.dry-run == 'false'
+    if: inputs.dry-run == false
     needs: version
     uses: ./.github/workflows/clouddriver.yml
     secrets: inherit
     with:
       version-override: ${{ needs.version.steps.version.outputs.version }}
   deck:
-    if: inputs.dry-run == 'false'
+    if: inputs.dry-run == false
     needs: version
     uses: ./.github/workflows/deck.yml
     secrets: inherit
     with:
       version-override: ${{ needs.version.steps.version.outputs.version }}
   deck-kayenta:
-    if: inputs.dry-run == 'false'
+    if: inputs.dry-run == false
     needs: version
     uses: ./.github/workflows/deck-kayenta.yml
     secrets: inherit
     with:
       version-override: ${{ needs.version.steps.version.outputs.version }}
   echo:
-    if: inputs.dry-run == 'false'
+    if: inputs.dry-run == false
     needs: version
     uses: ./.github/workflows/echo.yml
     secrets: inherit
     with:
       version-override: ${{ needs.version.steps.version.outputs.version }}
   fiat:
-    if: inputs.dry-run == 'false'
+    if: inputs.dry-run == false
     needs: version
     uses: ./.github/workflows/fiat.yml
     secrets: inherit
     with:
       version-override: ${{ needs.version.steps.version.outputs.version }}
   front50:
-    if: inputs.dry-run == 'false'
+    if: inputs.dry-run == false
     needs: version
     uses: ./.github/workflows/front50.yml
     secrets: inherit
     with:
       version-override: ${{ needs.version.steps.version.outputs.version }}
   gate:
-    if: inputs.dry-run == 'false'
+    if: inputs.dry-run == false
     needs: version
     uses: ./.github/workflows/gate.yml
     secrets: inherit
     with:
       version-override: ${{ needs.version.steps.version.outputs.version }}
   halyard:
-    if: inputs.dry-run == 'false'
+    if: inputs.dry-run == false
     needs: version
     uses: ./.github/workflows/halyard.yml
     secrets: inherit
     with:
       version-override: ${{ needs.version.steps.version.outputs.version }}
   igor:
-    if: inputs.dry-run == 'false'
+    if: inputs.dry-run == false
     needs: version
     uses: ./.github/workflows/igor.yml
     secrets: inherit
     with:
       version-override: ${{ needs.version.steps.version.outputs.version }}
   kayenta:
-    if: inputs.dry-run == 'false'
+    if: inputs.dry-run == false
     needs: version
     uses: ./.github/workflows/kayenta.yml
     secrets: inherit
     with:
       version-override: ${{ needs.version.steps.version.outputs.version }}
   keel:
-    if: inputs.dry-run == 'false'
+    if: inputs.dry-run == false
     needs: version
     uses: ./.github/workflows/keel.yml
     secrets: inherit
     with:
       version-override: ${{ needs.version.steps.version.outputs.version }}
   orca:
-    if: inputs.dry-run == 'false'
+    if: inputs.dry-run == false
     needs: version
     uses: ./.github/workflows/orca.yml
     secrets: inherit
     with:
       version-override: ${{ needs.version.steps.version.outputs.version }}
   rosco:
-    if: inputs.dry-run == 'false'
+    if: inputs.dry-run == false
     needs: version
     uses: ./.github/workflows/rosco.yml
     secrets: inherit
     with:
       version-override: ${{ needs.version.steps.version.outputs.version }}
   spin:
-    if: inputs.dry-run == 'false'
+    if: inputs.dry-run == false
     needs: version
     uses: ./.github/workflows/spin.yml
     secrets: inherit
     with:
       version-override: ${{ needs.version.steps.version.outputs.version }}
   libs:
-    if: inputs.dry-run == 'false'
+    if: inputs.dry-run == false
     needs: version
     uses: ./.github/workflows/spinnaker-libraries.yml
     secrets: inherit
@@ -182,7 +182,7 @@ jobs:
     # This requires some exhaustive logic, since a job that can be skipped won't satisfy a `needs`
     # https://github.com/actions/runner/issues/491
     if: |
-      always() && inputs.dry-run == 'false' &&
+      always() && inputs.dry-run == false &&
       (needs.version.result == 'success') &&
       (needs.clouddriver.result == 'success' || needs.clouddriver.result == 'skipped') &&
       (needs.deck.result == 'success' || needs.deck.result == 'skipped') &&
@@ -218,7 +218,7 @@ jobs:
           dry-run: ${{ inputs.dry-run }}
 
       - name: Create Github release
-        if: inputs.dry-run == 'false'
+        if: inputs.dry-run == false
         uses: actions/create-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
