--- a/.github/workflows/clouddriver-integration-tests-kubernetes.yml
+++ b/.github/workflows/clouddriver-integration-tests-kubernetes.yml
@@ -6,6 +6,11 @@ on:
   push:
     branches:
       - main
+      - release-*
+    paths:
+      - 'clouddriver/**'
+
+  pull_request:
     paths:
       - 'clouddriver/**'
 
