--- a/.github/workflows/kayenta-integration-tests.yml
+++ b/.github/workflows/kayenta-integration-tests.yml
@@ -6,8 +6,10 @@ on:
   push:
     branches:
       - main
+      - release-*
     paths:
       - 'kayenta/**'
+
   pull_request:
     paths:
       - 'kayenta/**'
@@ -26,10 +28,10 @@ jobs:
           ['Management', 'Swagger']
     steps:
       - name: Checkout Code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
 
       - name: Gradle validation step
-        uses: gradle/wrapper-validation-action@v1
+        uses: gradle/wrapper-validation-action@v3
 
       - name: Set up JDK 17
         uses: actions/setup-java@v4
@@ -52,10 +54,10 @@ jobs:
         test: ['canaryAnalysisIsSuccessful', 'canaryAnalysisIsFailed']
     steps:
       - name: Checkout Code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
 
       - name: Gradle validation step
-        uses: gradle/wrapper-validation-action@v1
+        uses: gradle/wrapper-validation-action@v3
 
       - name: Set up JDK 17
         uses: actions/setup-java@v4
