Fix plumbing of version override

--- a/.github/actions/generic-build-publish/action.yml
+++ b/.github/actions/generic-build-publish/action.yml
@@ -59,7 +59,7 @@ runs:
       uses: ./.github/actions/version
       with:
         namespace: ${{ inputs.project }}
-        version-override: ${{ inputs.build-tag-override }}
+        version-override: ${{ inputs.version-override }}
         github-token: ${{ inputs.github-token }}
         skip-tag: ${{ inputs.publish != 'true' }}
 
