--- a/.github/workflows/spinnaker-release-bom.yml
+++ b/.github/workflows/spinnaker-release-bom.yml
@@ -55,8 +55,45 @@ on:
         default: true
 
 jobs:
+  check-preconditions:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - name: Exit if not on a release branch
+        run: |
+          REF="${{ github.ref_name }}"
+          
+          if  [[ $REF != release-* ]]; then
+            echo "Release workflow must be run from a release branch"
+            exit 1
+          fi
+
+      - name: Generate version to verify
+        id: precondition-version
+        uses: ./.github/actions/version
+        with:
+          namespace: spinnaker
+          is-release: true
+          skip-increment: ${{ github.run_attempt != '1' }}
+          skip-tag: true
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Check branch matches desired version
+        run: |
+          REF="${{ github.ref_name }}"
+          REQUIRED_REF='release-${{ steps.precondition-version.outputs.release-train-suffixed }}'
+          
+          if [[ $REF != $REQUIRED_REF ]]; then
+            echo "Wrong release branch - please run from $REQUIRED_REF"
+            exit 1
+          fi
+
   spinnaker-release-bom:
     runs-on: ubuntu-latest
+    needs: check-preconditions
     steps:
       - uses: actions/checkout@v4
         with:
