--- a/.github/workflows/spinnaker-release-bom.yml
+++ b/.github/workflows/spinnaker-release-bom.yml
@@ -77,7 +77,7 @@ jobs:
         with:
           namespace: spinnaker
           is-release: true
-          skip-increment: ${{ github.run_attempt != '1' }}
+          skip-increment: true
           skip-tag: true
           github-token: ${{ secrets.GITHUB_TOKEN }}
 
