--- a/.github/workflows/spin.yml
+++ b/.github/workflows/spin.yml
@@ -120,7 +120,7 @@ jobs:
           project: spin
           version: ${{ steps.version.outputs.version }}
           build-command: 'false'
-          release-train: ${{ steps.version.outputs.release-train-suffixed }}
+          release-train: ${{ steps.version.outputs.release-train}}
           build-url: ${{ steps.version.outputs.build-url }}
           push: ${{ github.event_name != 'pull_request' }}
           gar-json-key: ${{ secrets.GAR_JSON_KEY }}
